--- a/src/pages/rec-leagues/RecLeagues.css
+++ b/src/pages/rec-leagues/RecLeagues.css
@@ -1,6 +1,5 @@
 .main-div {
     overflow-x: hidden;
-    margin-top: 120px;
 }
 
 
