--- a/src/pages/travel-teams/TravelTeams.css
+++ b/src/pages/travel-teams/TravelTeams.css
@@ -1,11 +1,7 @@
 .main-div {
     overflow-x: hidden;
-    margin-top: 120px;
 }
 
 
 @media (max-width: 990px) {
-    .main-div {
-        margin-top: 135px;
-    }
 }
